--- a/app/src/main/res/layout/content_player_details.xml
+++ b/app/src/main/res/layout/content_player_details.xml
@@ -1,26 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/player_details_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    android:transitionGroup="true"
+    android:orientation="vertical">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <TextView
+        android:id="@+id/game_text_view"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="18dp"
+        style="@style/Heading.Inverted"
+        android:background="@drawable/solid_color_shape"
+        android:textColor="@color/text_state_list"
+        android:text="This is some text"
+        android:height="100sp" />
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:padding="4dp">
 
-
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/score_list_item"
+            android:transitionName="@string/transition_player_name"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="0sp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            card_view:cardCornerRadius="0sp"
+            card_view:cardElevation="0sp"
+            card_view:cardPreventCornerOverlap="false"
+            card_view:cardUseCompatPadding="true"
+            card_view:contentPadding="18sp"
             >
 
             <TextView
-                android:id="@+id/details_player_name"
-                android:transitionName="@string/transition_player_name"
+                android:id="@+id/player_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -28,90 +50,9 @@
                 style="@style/Heading"
                 />
 
-        </RelativeLayout>
+        </android.support.v7.widget.CardView>
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerVertical="true"
-        android:padding="@dimen/activity_horizontal_margin"
-        android:orientation="vertical">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/DETAILS_phone_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Phone:"
-                android:textColor="#000"
-                android:textSize="20sp"/>
-
-            <TextView
-                android:id="@+id/DETAILS_phone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/DETAILS_phone_label"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:text="+01 123456789"
-                android:textColor="#9f9f9f"
-                android:textSize="20sp"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin">
-
-            <TextView
-                android:id="@+id/DETAILS_email_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Email:"
-                android:textColor="#000"
-                android:textSize="20sp"/>
-
-            <TextView
-                android:id="@+id/DETAILS_email"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/DETAILS_email_label"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:text="jonh.doe@example.com"
-                android:textColor="#9f9f9f"
-                android:textSize="20sp"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin">
-
-            <TextView
-                android:id="@+id/DETAILS_city_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="City:"
-                android:textColor="#000"
-                android:textSize="20sp"/>
-
-            <TextView
-                android:id="@+id/DETAILS_city"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/DETAILS_city_label"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:text="Rome"
-                android:textColor="#9f9f9f"
-                android:textSize="20sp"/>
-
-        </RelativeLayout>
-    </LinearLayout>
+    </FrameLayout>
 
 </LinearLayout>
+
